# ioos_qc

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  development.html  examples.html  genindex.html  github_deploy_key.enc  index.html  installation.html  modd.conf  objects.inv  other.html  py-modindex.html  pyproject.toml  pytest.ini  release.sh  releases.html  requirements-dev.txt  requirements.txt  resources.html  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html
.github/workflows/: default-tests.yml  deploy-docs.yml  numba-tests.yml  publish.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/ioos_qc/: argo.html  axds.html  config.html  gliders.html  plotting.html  qartod.html  results.html  stores.html  streams.html  utils.html
_modules/ioos_qc/config_creator/: config_creator.html  fx_parser.html  get_assets.html
_sources/: development.rst.txt  examples.rst.txt  installation.rst.txt  resources.rst.txt
_sources/api/: ioos_qc.rst.txt
_sources/examples/: QartodTestExample_SalinityAttenuation.ipynb.txt  QartodTestExample_WaterLevel.ipynb.txt  QartodTestExample_netCDF.ipynb.txt  Qartod_Single_Test_Example.ipynb.txt
api/: ioos_qc.config_creator.html  ioos_qc.html  modules.html
conda-recipe/: meta.yaml  meta.yml
docs/: .buildinfo  Makefile  deploy.sh  genindex.html  index.html  ioos_qartod.rst  modules.rst  objects.inv  py-modindex.html  requirements.txt  run_qartod.rst  search.html  searchindex.js  test.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/docs/: ioos_qartod.doctree  ioos_qartod.qc_tests.doctree  modules.doctree
docs/.doctrees/qc_tests/: index.doctree
docs/_modules/: index.html
docs/_modules/ioos_qartod/: handlers.html
docs/_modules/ioos_qartod/qc_tests/: auxillary_checks.html  qc.html  util.html
docs/_sources/docs/: ioos_qartod.qc_tests.txt  ioos_qartod.txt  modules.txt
docs/_sources/qc_tests/: index.txt
docs/docs/: ioos_qartod.html  ioos_qartod.qc_tests.html  modules.html
docs/qc_tests/: index.html
docs/source/: conf.py  development.rst  examples.rst  index.rst  installation.rst  other.rst  releases.rst  resources.rst  usage.rst
docs/source/api/: ioos_qc.config_creator.rst  ioos_qc.rst  modules.rst
docs/source/code/: auxillary_checks.rst  gliders.rst  index.rst  qc.rst
docs/source/examples/: ERDDAP_Example.ipynb  Plotting_Example.ipynb  QARTOD Examples.rst  QartodTestExample_Glider.ipynb  QartodTestExample_SalinityAttenuation.ipynb  QartodTestExample_WaterLevel.ipynb  QartodTestExample_netCDF.ipynb  Qartod_Single_Test_Example.ipynb  Qartod_netCDF_example.ipynb  README.md  TimingTest.ipynb  attenuated_salinity_example.csv  index.rst  pco2_netcdf_example.nc  requirements.txt  spike_test.yaml  storms_qc_test_1054.ipynb  water_level_example.csv
docs/source/examples/example_data/: nrt_SEA067_M37.nc
docs/source/examples/usage/: Config.ipynb  ContextConfig.ipynb  ERDDAP_Example.ipynb  NetcdfStream.ipynb  NumpyStream.ipynb  PandasStream.ipynb  Plotting_Example.ipynb  QartodTestExample_timing.ipynb  Qartod_netCDF_example.ipynb  StreamConfig.ipynb  XarrayStream.ipynb  erddap_qc_workflow.ipynb  erddap_qc_workflow_summary_stats.ipynb  storms_qc_test_1054.ipynb
examples/: QartodTestExample_Glider.html  QartodTestExample_Glider.ipynb  QartodTestExample_WaterLevel.html  QartodTestExample_WaterLevel.ipynb  Qartod_Single_Test_Example.html  Qartod_Single_Test_Example.ipynb  README.md
ioos_qartod/: handlers.py
ioos_qartod/flags/: __init__.py  do.py  do_2.py  temp_salinity.py  water_level.py  waves.py  winds.py
ioos_qartod/qc_tests/: auxillary_checks.py  gliders.py  qc.py  test_qartod_qc.py
ioos_qc/: __init__.py  argo.py  axds.py  conf.py  config.py  gliders.py  moving_platforms.py  plotting.py  qartod.py  results.py  sources.py  stores.py  streams.py  summary.py  timing_gap.py  utils.py
ioos_qc/config_creator/: __init__.py  config_creator.py  fx_parser.py  get_assets.py  make_config.py
resources/: narr.nc
test/: requirements.txt  test_auxillary_checks.py  test_do.py  test_glider_checks.py  test_qartod_qc.py  test_temp_salinity.py  test_water_level_flags.py  test_waves.py  test_wind_flags.py
tests/: requirements.txt  test_argo.py  test_auxillary_checks.py  test_axds.py  test_conf.py  test_config.py  test_config_creator.py  test_config_deprecated.py  test_erddap_urls.py  test_flt_simple.py  test_gliders.py  test_moving_platforms.py  test_performance.py  test_plotting.py  test_qartod.py  test_qartod_performance.py  test_qartod_qc.py  test_sources.py  test_stores.py  test_streams.py  test_summary.py  test_timing_gap.py  test_utils.py
tests/data/: creator_config.json  qc_variable_config.json
