[metadata]
name = ioos_qc
version = attr: ioos_qc.__version__
description = IOOS QARTOD and Quality Control tests implemented in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache
license_file = LICENSE.txt
author = Kyle Wilcox
author_email = kyle@axds.co
url = https://github.com/ioos/ioos_qc
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    geographiclib
    geojson
    h5netcdf
    jsonschema
    numpy>=1.14
    pandas
    pyparsing
    ruamel.yaml
    scipy
    shapely
    xarray
tests_require =
    dask
    pytest
    pytest-flake8>=1.0.4
    flake8
python_requires = >=3.7,<4

[options.extras_require]
extras =
    numba
    simplejson

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = -s -rxs -v
flake8-max-line-length = 100
flake8-ignore =
    *.py E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291 W504
    docs/* ALL
    ioos_qc/tests/*.py F403 F405

[flake8]
max-line-length = 100
per-file-ignores =
    *.py: E265 E501 E221 E203 E201 E124 E202 E241 E251 W293 W291 W504
    ioos_qc/tests/*.py: F403 F405
exclude =
    docs/

[tool:isort]
line_length=100
indent='    '
balanced_wrapping=1
multi_line_output=3
default_section=FIRSTPARTY
use_parentheses=1
reverse_relative=1
known_standard_library=simplejson
length_sort=1
combine_star=1
order_by_type=0
